# PwPO-mchtr

./: pyproject.toml
movement_detection/: main.py
object_tracking/: main.py
