[tool.poetry]
name = "pwpo"
version = "0.1.0"
description = ""
authors = ["Zofia Kubrak"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.22.3"
opencv-python = "^4.5.5"
opencv-python-headless = "^4.5.5"
opencv-contrib-python = "^4.5.5"
flake8 = "^4.0.1"
black = "^22.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
